# ksearch

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
completions/: ksearch.bash
patches/: bash_completions.bash  bash_completions_toml.bash
resources/tests/: test.cue
resources/tests/cue/: git.cue  pfsense.cue  test.cue
resources/tests/cue/cue.mod/: module.cue
resources/tests/cue/schema/: cheats.cue  knowledges.cue
resources/tests/json/: git.json  test.json
resources/tests/toml/: auditd.toml
src/: cheatsheet.rs  cue.rs  knowledge.rs  main.rs
src/cli/: mod.rs
