[package]
name = "ksearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
cue = []

[dependencies]
clap = "4.2.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[build-dependencies]
clap = "4.2.5"
clap_complete = "4.2.1"