[package]
name = "ksearch"
version = "1.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
cue = []

[dependencies]
clap = { version = "4.2.5", features = ["cargo"] }
rayon = "1.8.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[build-dependencies]
clap = { version = "4.2.5", features = ["cargo"] }
clap_complete = "4.2.1"
