[package]
name = "ksearch"
version = "2.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.5", features = ["cargo"] }
toml = "0.8.10"
#rayon = "1.8.0"
serde = { version = "1.0.160", features = ["derive"] }
#serde_json = "1.0.96"

[build-dependencies]
clap = { version = "4.2.5", features = ["cargo"] }
clap_complete = "4.2.1"
